# info

./: .buildinfo  Dockerfile  build.sh  genindex.html  intro.html  markdown-notebooks.html  markdown.html  nginx.conf  notebooks.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
book/: _config.yml
