[tool.poetry]
name = "info"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
